Upgrade to Java 21 (#6)